fixing imgs for gh-pages

--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,6 +1,8 @@
 .info-hero {
-    background-image: url(../images/two-dudes.jpg);
-    background-position: 50%;
+   background:url(../images/double-rail.jpg);
+  
+    background-position: 50% 0;
+  
 }
 
 .info-section {
