--- a/css/style.css
+++ b/css/style.css
@@ -578,8 +578,8 @@ footer {
   .questions-contain h3 {
     margin-top: 0; } }
 .info-hero {
-  background-image: url(../images/two-dudes.jpg);
-  background-position: 50%; }
+  background: url(../images/double-rail.jpg);
+  background-position: 50% 0; }
 
 .info-section {
   margin-top: -50px;
