fixing footer section

--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -193,6 +193,10 @@
         margin-bottom: 160px;
     }
     .events-section {
+        h3{
+            margin-top:-4px;
+
+        }
         li {
             box-shadow: none;
         }
