--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -174,6 +174,9 @@
         h3 {
             margin-top: 50px;
         }
+        a{
+            font-size:25px;
+        }
     }
     .hours-section {
         .hours-bar-large {
