--- a/css/style.scss
+++ b/css/style.scss
@@ -237,8 +237,13 @@ li {
         margin-top: -10px;
         color: white;
         font-weight: 800;
+         -webkit-transform: rotate(-10deg);
+        /* Ch <36, Saf 5.1+, iOS, An =<4.4.4 */
+        -ms-transform: rotate(-10deg);
+        /* IE 9 */
         transform: rotate(-10deg);
-        font-size: 30px;
+        /* IE 10, Fx 16+, Op 12.1+ */
+        font-size: 20px;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
     }
 }
