fixing logo size

--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -20,6 +20,7 @@
     
    
 }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -29,6 +30,8 @@
     
    
 }
+
+
 
     .section-img {
         margin-top: -30px;
@@ -72,6 +75,13 @@
     // .prices-section, .location-section, .programs-section {
     //     margin-top: -190px;
     // }
+
+    .logo{
+    p{
+        font-size:30px;
+        margin-top:-35px;
+    }
+}
 
 
     .navbar-toggle{
