--- a/css/style.css
+++ b/css/style.css
@@ -278,15 +278,9 @@ li:last-of-type {
     text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
   .logo p {
     text-align: right;
-    margin-top: -10px;
+    margin-top: -15px;
     color: white;
     font-weight: 800;
-    -webkit-transform: rotate(-10deg);
-    /* Ch <36, Saf 5.1+, iOS, An =<4.4.4 */
-    -ms-transform: rotate(-10deg);
-    /* IE 9 */
-    transform: rotate(-10deg);
-    /* IE 10, Fx 16+, Op 12.1+ */
     font-size: 20px;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
 
@@ -729,6 +723,10 @@ input {
     .lessons-price-section li:first-of-type {
       padding-top: 15px; } }
 @media screen and (min-width: 992px) {
+  .logo p {
+    font-size: 30px;
+    margin-top: -35px; }
+
   .navbar-toggle {
     margin-top: 30px; }
 
