--- a/css/_lessons.scss
+++ b/css/_lessons.scss
@@ -4,6 +4,12 @@
     background-position: 40% 0px;
 }
 
+nav{
+.logo-fix{
+    margin-left:35px;
+}
+}
+
 .lessons-info-section {
     margin-top: -50px;
     background: white;
