--- a/css/_info.scss
+++ b/css/_info.scss
@@ -16,7 +16,7 @@
         color: black;
     }
     h3 {
-        margin-top: 0;
+        margin-top: 30px;
     }
     .history-section {
         margin-top: 80px;
