fixing margins on cable lesson prices

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -30,11 +30,11 @@ h2,
     background-position: 50%;
 }
 
-.third {
-    background-image: url(../images/sesitec.jpg);
-    background-position: 40% 0px;
-    background-size: cover;
-}
+// .third {
+//     background-image: url(../images/sesitec.jpg);
+//     background-position: 40% 0px;
+//     background-size: cover;
+// }
 
 .fourth {
     background-image: url(../images/philip.jpg);
