--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,6 @@ h2,
   background-image: url(../images/teen-rider.jpg);
   background-position: 50%; }
 
-.third {
-  background-image: url(../images/sesitec.jpg);
-  background-position: 40% 0px;
-  background-size: cover; }
-
 .fourth {
   background-image: url(../images/philip.jpg);
   background-position: 80% 0px;
@@ -645,36 +640,40 @@ nav .logo-fix {
     margin-top: 80px; }
 
 .lessons-price-section {
-  margin-top: 0;
+  margin-top: 0px;
   background: #334d69;
   border: 1px solid #334d69; }
   .lessons-price-section h2 {
     margin-bottom: 110px; }
   .lessons-price-section li:first-of-type {
-    padding-top: 50px; }
+    padding-top: 20px; }
 
-.lessons-price-container:last-child {
-  margin-bottom: 0; }
-.lessons-price-container li:first-of-type {
-  background: #9fa9b2; }
-.lessons-price-container .prices-bar {
-  background: #1e2e41;
-  height: 30px; }
-.lessons-price-container .prices-circle {
-  margin: 0 auto;
-  position: relative;
-  bottom: 60px;
-  width: 80px;
-  height: 80px;
-  background-color: #faba56;
-  background-image: url("../images/ticket2.png");
-  background-repeat: no-repeat;
-  background-position: 16px 16px;
-  border-radius: 40px; }
-.lessons-price-container li {
-  text-align: center;
-  background: #ebebeb;
-  margin-bottom: 4px; }
+.lessons-price-container {
+  margin-top: 140px; }
+  .lessons-price-container li {
+    margin-top: 0; }
+  .lessons-price-container:last-child {
+    margin-bottom: 0; }
+  .lessons-price-container li:first-of-type {
+    background: #9fa9b2; }
+  .lessons-price-container .prices-bar {
+    background: #1e2e41;
+    height: 30px; }
+  .lessons-price-container .prices-circle {
+    margin: 0 auto;
+    position: relative;
+    bottom: 60px;
+    width: 80px;
+    height: 80px;
+    background-color: #faba56;
+    background-image: url("../images/ticket2.png");
+    background-repeat: no-repeat;
+    background-position: 16px 16px;
+    border-radius: 40px; }
+  .lessons-price-container li {
+    text-align: center;
+    background: #ebebeb;
+    margin-bottom: 4px; }
 
 @media (min-width: 480px) {
   .prices-section, .location-section, .programs-section {
@@ -733,6 +732,18 @@ nav .logo-fix {
 
   .info-section h3 {
     margin-top: 0; }
+
+  .lessons-price-container {
+    margin-top: 0; }
+
+  .lessons-price-section {
+    margin-top: 0px;
+    background: #334d69;
+    border: 1px solid #334d69; }
+    .lessons-price-section h2 {
+      margin-bottom: 110px; }
+    .lessons-price-section li:first-of-type {
+      padding-top: 50px; }
 
   .navbar-toggle {
     margin-top: 4px; }
