--- a/css/style.css
+++ b/css/style.css
@@ -727,7 +727,10 @@ nav .logo-fix {
       padding-top: 15px; }
 
   .lessons-price-container {
-    margin-top: 0; } }
+    margin-top: 0; }
+
+  .wavier-section .wavier-btn {
+    width: 40%; } }
 @media screen and (min-width: 992px) {
   .logo p {
     font-size: 30px;
