optimizing imgs and changing media queries

--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,7 +1,8 @@
 .info-hero {
-   background:url(../images/double-rail.jpg);
+   background:url(../images/double-rail2.jpg);
   
-    background-position: 50% 0;
+    // background-position: 50% 0;
+    background-position:52% 0;
   
 }
 
