optimizing imgs and changing media queries

--- a/css/_info.scss
+++ b/css/_info.scss
@@ -2,7 +2,7 @@
    background:url(../images/double-rail2.jpg);
   
     // background-position: 50% 0;
-    background-position:52% 0;
+    background-position:0% 0;
   
 }
 
@@ -11,7 +11,8 @@
     background: white;
     color: black;
     h2 {
-        margin-bottom: 80px;
+        margin-bottom: 40px;
+        font-size:60px;
     }
     p, h2, h3 {
         color: black;
