--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,8 +1,8 @@
 .info-hero {
    background:url(../images/double-rail2.jpg);
   
-    // background-position: 50% 0;
-    background-position:0% 0;
+    background-position: 50% -30px;
+
   
 }
 
@@ -13,6 +13,7 @@
     h2 {
         margin-bottom: 40px;
         font-size:60px;
+     
     }
     p, h2, h3 {
         color: black;
@@ -28,7 +29,9 @@
 .cable-section {
     background: $section-teal;
     h2 {
-        margin-bottom: 80px;
+        margin-bottom: 40px;
+          font-size:60px;
+
     }
     .top-img {
         &:first-of-type {
