optimizing imgs and changing media queries

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -15,11 +15,11 @@ h2,
 
 .item {
     background-size: cover;
-    height: 400px;
+    height: 468px;
 }
 
 .first {
-    background-image: url(../images/girl-air.jpg);
+    background-image: url(../images/girl-air-newer.jpg);
     background-size: cover;
     background-position: 0%;
     background-repeat: no-repeat;
