removed unneeded images

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -19,7 +19,7 @@ h2,
 }
 
 .first {
-    background-image: url(../images/girl-air-newer.jpg);
+    background-image: url(../images/girl-air1.jpg);
     background-size: cover;
     background-position: 0%;
     background-repeat: no-repeat;
